2009-05-12  Sebastien Merle  <sebastien@fluendo.com>

	* flumotion/component/encoders/vp6/vp6.py:
	Reverted the changed made for #2133.

2009-04-24  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/component/encoders/aac/aac.py:
	* flumotion/component/encoders/mp3/mp3.py:
	Use legacyresample instead of audioresample.
	Check if the machine has legacyresample. If not, fall back to
	audioresample (which was not broken at the time legacyresample wasn't
	around)

2009-04-24  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion-flash.spec.in:
	Remove the twisted-python build requirement, requiring flumotion is
	enough. See r18401.

2009-04-23  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* configure.ac:
	Back to dev.


=== release 0.5.1 ===

2009-04-23  Xavier Queralt Mateu  <xqueralt@flumotion.com>
	* configure.ac:
	Releasing 0.5.1 and updating the requirements of flumotion to 0.5.4
	* flumotion-flash.spec.in:
	Updated the dependencies
	* pkg/ubuntu-intrepid (added):
	* pkg/ubuntu-intrepid/control (added):
	* pkg/ubuntu-intrepid/changelog (added):
	Add a new directory for ubuntu intrepid packages

2009-03-30  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	reviewed by: sebastien

	* flumotion-flash.spec.in:
	Update requirement of flumotion to 0.5.3
	* flumotion/component/encoders/mp3/mp3.py:
	* flumotion/component/encoders/mp3/wizard_gtk.py:
	Use fluendo's mp3 encoder when lame is not available.
	Fixes #4054

2009-03-23  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion/component/encoders/aac/wizard_gtk.py:
	Remove the informative message when the libstdc++5 check is done.
	* flumotion/component/muxers/mp3/Makefile.am:
	* flumotion/component/muxers/mp3/__init__.py:
	* flumotion/component/muxers/mp3/mp3.py:
	Apparently the new files added on the last commit had the same
	content twice. Deleting these duplicated contents.

2009-03-18  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	reviewed by: jlegoff

	* configure.ac: